@@ -171,12 +171,12 @@ if __name__ == '__main__':
     cffile.createDimension('time',None)
     #creating variables
     varx=cffile.createVariable('x0')
-    varx[:] = (delta[0]*Numeric.arange(numx-1)).astype(Numeric.Float32)
+    varx[:] = (delta[0]/2.+delta[0]*Numeric.arange(numx-1)).astype(Numeric.Float32)
     varx=cffile.createVariable('x1')
     varx[:] = (delta[0]*Numeric.arange(numx)).astype(Numeric.Float32)
 
     vary=cffile.createVariable('y0')
-    vary[:] = (delta[1]*Numeric.arange(numy-1)).astype(Numeric.Float32)
+    vary[:] = (delta[1]/2.+delta[1]*Numeric.arange(numy-1)).astype(Numeric.Float32)
     vary=cffile.createVariable('y1')
     vary[:] = (delta[1]*Numeric.arange(numy)).astype(Numeric.Float32)
 
